--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
-    "pm2": "^5.3.0",
-    "nodemon": "^3.1.1"
+    "nodemon": "^3.1.1",
+    "pm2": "^5.3.0"
   },
   "author": "",
   "license": "ISC"
