--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.1",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "redis": "^4.7.0"
   },
   "author": "",
   "license": "ISC"
