--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "scripts": {
     "start": "pm2 start ecosystem.config.cjs",
     "dev": "pm2 start ecosystem.config.cjs --env development",
-    "prod": "pm2 start ecosystem.config.cjs --env production"
+    "prod": "pm2 start ecosystem.config.cjs --env production",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:auth": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/auth.test.js",
+    "test:user": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/user.test.js",
+    "test:post": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/post.test.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:debug": "node --experimental-vm-modules node_modules/jest/bin/jest.js test"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
@@ -23,5 +28,10 @@
     "redis": "^4.7.0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "dotenv": "^16.4.7",
+    "jest": "^29.7.0",
+    "puppeteer": "^24.3.0"
+  }
 }
