--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.1",
     "pm2": "^5.3.0",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "supertest": "^7.0.0"
   },
   "author": "",
   "license": "ISC",
