--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests if script exists
-        run: npm run ci-test --if-present
+      # - name: Run tests if script exists
+      #   run: npm run ci-test --if-present
 
       - name: Build if script exists
         run: npm run build --if-present
